Add register page

--- a/Cafe_DeTerunjing/appsettings.json
+++ b/Cafe_DeTerunjing/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Cafe_DeTerunjingContext": "Server=(localdb)\\mssqllocaldb;Database=Cafe_DeTerunjing.Data;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "Cafe_DeTerunjingContext": "Data Source=sql2016.fse.network;User ID=user_db_2125781_db_2125781_cafedeterunjing_2023 ; Password=P@55word ;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
   }
 }
